--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>tic-Tac-toe</title></head>
-<lynk type="text/javascript" href="index.js">
-<body></body>
+  <title>tic-Tac-toe</title></head>
+  <script src="index.js"></script>
+<body>
+  <script src="field.js"></script>
+</body>
 </html>
