--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>tic-Tac-toe</title></head>
+  <title>tic-Tac-toe</title>
   <script src="index.js"></script>
+</head>
 <body>
   <script src="field.js"></script>
 </body>
