--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>tic-Tac-toe</title>
+  <link type="text/css" rel="stylesheet" href="index.css">
   <script src="index.js"></script>
 </head>
 <body>
