--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>tic-Tac-toe</title>
   <link type="text/css" rel="stylesheet" href="index.css">
-  <script src="index.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-  <script src="field.js"></script>
+  <script type="text/javascript" src="field.js"></script>
 </body>
 </html>
