--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>tic-Tac-toe</title>
   <link type="text/css" rel="stylesheet" href="index.css">
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="field.js" defer></script>
+  <script type="text/javascript" src="index.js" defer></script>
 </head>
-<body>
-  <script type="text/javascript" src="field.js"></script>
+<body>  
 </body>
 </html>
