--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script type="text/javascript" src="field.js" defer></script>
   <script type="text/javascript" src="index.js" defer></script>
 </head>
-<body>  
+<body>
+  <h2>Welcome to</h2>
+  <h1>tic-Tac-toe</h1>
 </body>
 </html>
