--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 <body>
   <h2>Welcome to</h2>
   <h1>tic-Tac-toe</h1>
+  <table>
+    <tr>
+      <td><td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td><td>
+    </tr>
+  </table>
 </body>
 </html>
