--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <button class="start-game">Start Game</button>
     </div>
     <div class="ask-user-name-panel">
-      <h2>Input your name</h2>
-      <input type="text" placeholder="User's name'">
+      <h2>Input your names</h2>
+      <input type="text" placeholder="1st User's name">
+      <input type="text" placeholder="2nd User's name">
     </div>
   </div>
   <div class="field">
